<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintRight_toLeftOf="parent"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            android:layout_marginTop="228dp"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/attach_imageview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0.2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintLeft_creator="1"
            app:srcCompat="@drawable/poster_jellyfish"
            android:scaleType="centerCrop" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_attach"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp"
            android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="8dp" />

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/description_scrollview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_user_name"
                        android:inputType="text"
                        android:hint="@string/hint_user_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_user_email"
                        android:inputType="textEmailAddress"
                        android:hint="@string/hint_user_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_user_location"
                        android:inputType="text"
                        android:hint="@string/hint_user_location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/action_send_report"
            android:textColor="#fff"
            android:id="@+id/appCompatButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
